--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,22 +2,19 @@
   "compilerOptions": {
     "forceConsistentCasingInFileNames": true,
     "importHelpers": true,
-    "jsx": "react",
-    "jsxFactory": "etch.dom",
-    "lib": ["es7", "dom", "ES2017.object"],
-    "module": "commonjs",
-    "noLib": false,
+    "lib": ["dom", "es6"],
+    "module": "none",
     "outDir": "./dist",
     "preserveConstEnums": true,
     "skipLibCheck": true,
-    "sourceMap": false,
+    "sourceMap": true,
     "strict": true,
-    "target": "es2017",
+    "target": "es5",
     "noUnusedParameters": true,
     "noUnusedLocals": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
     "noImplicitThis": true
   },
-  "compileOnSave": true
+  "compileOnSave": false
 }
